# tinycolor

./: Cargo.toml  readme.md
src/: color.rs  lib.rs
tests/: unit_tests.rs
